--- a/example/transform/openai_long_text_splitter.ipynb
+++ b/example/transform/openai_long_text_splitter.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 51,
    "id": "b12b5bd5",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 52,
    "id": "8d84dd70",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
        "True"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
    "source": [
     "from dotenv import load_dotenv\n",
     "from uniflow.flow.client import TransformClient\n",
-    "from uniflow.flow.config import TransformOpenAIConfig, TransformForGenerationOpenAIGPT3p5Config\n",
+    "from uniflow.flow.config import TransformForGenerationOpenAIGPT3p5Config\n",
     "from uniflow.op.model.model_config import OpenAIModelConfig\n",
     "from uniflow.op.prompt import Context, PromptTemplate\n",
     "\n",
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 53,
    "id": "dfe82668",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,13 +233,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = TransformForGenerationOpenAIGPT3p5Config(\n",
+    "from uniflow.flow.config import TransformGoogleConfig\n",
+    "\n",
+    "# config = TransformForGenerationOpenAIGPT3p5Config(\n",
+    "#     prompt_template=guided_prompt,\n",
+    "#     model_config=OpenAIModelConfig(),\n",
+    "#     auto_split_long_text=True\n",
+    "# )\n",
+    "\n",
+    "config = TransformGoogleConfig(\n",
     "    prompt_template=guided_prompt,\n",
-    "    model_config=OpenAIModelConfig(),\n",
     "    auto_split_long_text=True\n",
     ")\n",
     "\n",
@@ -255,14 +262,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:07<00:00,  1.08s/it]\n"
+      "  0%|          | 0/7 [00:00<?, ?it/s]WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 1 of 3. Reason: timed out\n",
+      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 2 of 3. Reason: [Errno 64] Host is down\n",
+      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 3 of 3. Reason: [Errno 64] Host is down\n",
+      "WARNING [_default]: Authentication failed using Compute Engine authentication due to unavailable metadata server.\n",
+      " 14%|█▍        | 1/7 [00:03<00:18,  3.04s/it]WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 1 of 3. Reason: [Errno 64] Host is down\n",
+      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 2 of 3. Reason: [Errno 64] Host is down\n",
+      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 3 of 3. Reason: [Errno 64] Host is down\n",
+      "WARNING [_default]: Authentication failed using Compute Engine authentication due to unavailable metadata server.\n",
+      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 1 of 3. Reason: [Errno 64] Host is down\n",
+      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 2 of 3. Reason: [Errno 64] Host is down\n",
+      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 3 of 3. Reason: [Errno 64] Host is down\n",
+      "WARNING [_default]: Authentication failed using Compute Engine authentication due to unavailable metadata server.\n",
+      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 1 of 3. Reason: [Errno 64] Host is down\n",
+      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 2 of 3. Reason: [Errno 64] Host is down\n",
+      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 3 of 3. Reason: [Errno 64] Host is down\n",
+      "WARNING [_default]: Authentication failed using Compute Engine authentication due to unavailable metadata server.\n",
+      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 1 of 3. Reason: [Errno 64] Host is down\n",
+      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 2 of 3. Reason: [Errno 64] Host is down\n",
+      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 3 of 3. Reason: [Errno 64] Host is down\n",
+      "WARNING [_default]: Authentication failed using Compute Engine authentication due to unavailable metadata server.\n",
+      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 1 of 3. Reason: [Errno 64] Host is down\n",
+      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 2 of 3. Reason: [Errno 64] Host is down\n",
+      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 3 of 3. Reason: [Errno 64] Host is down\n",
+      "WARNING [_default]: Authentication failed using Compute Engine authentication due to unavailable metadata server.\n",
+      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 1 of 3. Reason: [Errno 64] Host is down\n",
+      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 2 of 3. Reason: [Errno 64] Host is down\n",
+      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 3 of 3. Reason: [Errno 64] Host is down\n",
+      "WARNING [_default]: Authentication failed using Compute Engine authentication due to unavailable metadata server.\n",
+      "100%|██████████| 7/7 [00:03<00:00,  2.29it/s]\n"
      ]
     }
    ],
@@ -280,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 57,
    "id": "74ccffb8",
    "metadata": {},
    "outputs": [
@@ -290,64 +325,64 @@
        "\n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who is the beautiful Helene?\n",
+       "            <b>Question:</b> Who is the illegitimate son of Count Bezukhov and what was his first appearance in society like?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> The beautiful Helene is Prince Vasili's daughter.\n",
+       "            <b>Answer:</b> The illegitimate son of Count Bezukhov is Pierre. His first appearance in society was greeted with a nod from Anna Pavlovna, but she also showed anxiety and fear at his entrance due to his observant and natural expression.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who was the elderly lady who approached Prince Vasili in the anteroom?\n",
+       "            <b>Question:</b> Who entered the drawing room just then?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> The elderly lady was Princess Drubetskaya, belonging to one of the best families in Russia.\n",
+       "            <b>Answer:</b> Prince Andrew Bolkonski.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> What does Prince Hippolyte do after the princess leaves the hall?\n",
+       "            <b>Question:</b> What story did Prince Hippolyte tell at the end of the conversation?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Prince Hippolyte approaches the little princess and begins to whisper something to her. Then, he hurriedly puts on his cloak and runs out into the porch to follow the princess.\n",
+       "            <b>Answer:</b> Prince Hippolyte told a story about a stingy lady from Moscow who had a maid put on a livery and get up behind the carriage with her while she made some calls. The maid lost her hat and her long hair came down on a windy day.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who was Pierre staying with at Prince Vasili Kuragin's and sharing a dissipated life with?\n",
+       "            <b>Question:</b> Who was staying at Prince Vasili Kuragin's and sharing the dissipated life of his son Anatole?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Pierre was staying at Prince Vasili Kuragin's and sharing the dissipated life of his son Anatole, whom they were planning to reform by marrying him to Prince Andrew's sister.\n",
+       "            <b>Answer:</b> Pierre was staying at Prince Vasili Kuragin's and sharing the dissipated life of his son Anatole.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who were the visitors that entered the drawing room?\n",
+       "            <b>Question:</b> Who entered the drawing room with her round-faced, smiling daughter?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Marya Lvovna Karagina and her daughter entered the drawing room.\n",
+       "            <b>Answer:</b> Marya Lvovna Karagina entered the drawing room with her round-faced, smiling daughter.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who is the countess's youngest girl?\n",
+       "            <b>Question:</b> Who was the youngest girl in the family?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Natasha is the countess's youngest girl.\n",
+       "            <b>Answer:</b> Natasha.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> How old is Natasha when she counts on her fingers in the scene?\n",
+       "            <b>Question:</b> What did Natasha do after embracing him and kissing him on the lips?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Natasha counts on her slender little fingers and counts to sixteen.\n",
+       "            <b>Answer:</b> She slipped down among the flowerpots on the other side of the tubs and stood, hanging her head.\n",
        "        </div>\n",
        "    </div>\n",
        "    "
