--- a/example/transform/openai_long_text_splitter.ipynb
+++ b/example/transform/openai_long_text_splitter.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 121,
    "id": "b12b5bd5",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 122,
    "id": "8d84dd70",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
        "True"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 123,
    "id": "dfe82668",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,20 +233,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from uniflow.flow.config import TransformGoogleConfig\n",
-    "\n",
-    "# config = TransformForGenerationOpenAIGPT3p5Config(\n",
-    "#     prompt_template=guided_prompt,\n",
-    "#     model_config=OpenAIModelConfig(),\n",
-    "#     auto_split_long_text=True\n",
-    "# )\n",
-    "\n",
-    "config = TransformGoogleConfig(\n",
+    "config = TransformForGenerationOpenAIGPT3p5Config(\n",
     "    prompt_template=guided_prompt,\n",
+    "    model_config=OpenAIModelConfig(),\n",
     "    auto_split_long_text=True\n",
     ")\n",
     "\n",
@@ -262,42 +255,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/7 [00:00<?, ?it/s]WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 1 of 3. Reason: timed out\n",
-      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 2 of 3. Reason: [Errno 64] Host is down\n",
-      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 3 of 3. Reason: [Errno 64] Host is down\n",
-      "WARNING [_default]: Authentication failed using Compute Engine authentication due to unavailable metadata server.\n",
-      " 14%|█▍        | 1/7 [00:03<00:18,  3.04s/it]WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 1 of 3. Reason: [Errno 64] Host is down\n",
-      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 2 of 3. Reason: [Errno 64] Host is down\n",
-      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 3 of 3. Reason: [Errno 64] Host is down\n",
-      "WARNING [_default]: Authentication failed using Compute Engine authentication due to unavailable metadata server.\n",
-      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 1 of 3. Reason: [Errno 64] Host is down\n",
-      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 2 of 3. Reason: [Errno 64] Host is down\n",
-      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 3 of 3. Reason: [Errno 64] Host is down\n",
-      "WARNING [_default]: Authentication failed using Compute Engine authentication due to unavailable metadata server.\n",
-      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 1 of 3. Reason: [Errno 64] Host is down\n",
-      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 2 of 3. Reason: [Errno 64] Host is down\n",
-      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 3 of 3. Reason: [Errno 64] Host is down\n",
-      "WARNING [_default]: Authentication failed using Compute Engine authentication due to unavailable metadata server.\n",
-      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 1 of 3. Reason: [Errno 64] Host is down\n",
-      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 2 of 3. Reason: [Errno 64] Host is down\n",
-      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 3 of 3. Reason: [Errno 64] Host is down\n",
-      "WARNING [_default]: Authentication failed using Compute Engine authentication due to unavailable metadata server.\n",
-      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 1 of 3. Reason: [Errno 64] Host is down\n",
-      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 2 of 3. Reason: [Errno 64] Host is down\n",
-      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 3 of 3. Reason: [Errno 64] Host is down\n",
-      "WARNING [_default]: Authentication failed using Compute Engine authentication due to unavailable metadata server.\n",
-      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 1 of 3. Reason: [Errno 64] Host is down\n",
-      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 2 of 3. Reason: [Errno 64] Host is down\n",
-      "WARNING [_metadata]: Compute Engine Metadata server unavailable on attempt 3 of 3. Reason: [Errno 64] Host is down\n",
-      "WARNING [_default]: Authentication failed using Compute Engine authentication due to unavailable metadata server.\n",
-      "100%|██████████| 7/7 [00:03<00:00,  2.29it/s]\n"
+      "100%|██████████| 7/7 [00:08<00:00,  1.14s/it]\n"
      ]
     }
    ],
@@ -315,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 127,
    "id": "74ccffb8",
    "metadata": {},
    "outputs": [
@@ -325,34 +290,34 @@
        "\n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who is the illegitimate son of Count Bezukhov and what was his first appearance in society like?\n",
+       "            <b>Question:</b> Who was the well-known maid of honor and favorite of the Empress Marya Fedorovna at Anna Pavlovna's reception?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> The illegitimate son of Count Bezukhov is Pierre. His first appearance in society was greeted with a nod from Anna Pavlovna, but she also showed anxiety and fear at his entrance due to his observant and natural expression.\n",
+       "            <b>Answer:</b> Anna Pavlovna Scherer.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who entered the drawing room just then?\n",
+       "            <b>Question:</b> Who was the first visitor to enter the drawing room in the last context?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Prince Andrew Bolkonski.\n",
+       "            <b>Answer:</b> Prince Andrew Bolkonski, the little princess' husband.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> What story did Prince Hippolyte tell at the end of the conversation?\n",
+       "            <b>Question:</b> What is Prince Hippolyte doing as he whispers something to the little princess?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Prince Hippolyte told a story about a stingy lady from Moscow who had a maid put on a livery and get up behind the carriage with her while she made some calls. The maid lost her hat and her long hair came down on a windy day.\n",
+       "            <b>Answer:</b> Prince Hippolyte is wrapping a shawl around the little princess and keeps his arm around her for a long time.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who was staying at Prince Vasili Kuragin's and sharing the dissipated life of his son Anatole?\n",
+       "            <b>Question:</b> Who was Pierre staying with and sharing a dissipated life with?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
        "            <b>Answer:</b> Pierre was staying at Prince Vasili Kuragin's and sharing the dissipated life of his son Anatole.\n",
@@ -361,16 +326,16 @@
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who entered the drawing room with her round-faced, smiling daughter?\n",
+       "            <b>Question:</b> Who is the tall, stout, and proud-looking woman that entered the drawing room?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Marya Lvovna Karagina entered the drawing room with her round-faced, smiling daughter.\n",
+       "            <b>Answer:</b> Marya Lvovna Karagina\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who was the youngest girl in the family?\n",
+       "            <b>Question:</b> Who does the countess consider her youngest girl?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
        "            <b>Answer:</b> Natasha.\n",
@@ -379,10 +344,10 @@
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> What did Natasha do after embracing him and kissing him on the lips?\n",
+       "            <b>Question:</b> What did Natasha do after embracing him and kissing him?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> She slipped down among the flowerpots on the other side of the tubs and stood, hanging her head.\n",
+       "            <b>Answer:</b> Natasha slipped down among the flowerpots on the other side of the tubs and stood, hanging her head.\n",
        "        </div>\n",
        "    </div>\n",
        "    "
@@ -422,6 +387,17 @@
     "\n",
     "# Display the formatted HTML\n",
     "display(HTML(html_output))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "686b67b7",
+   "metadata": {},
+   "source": [
+    "## Appendix\n",
+    "\n",
+    "- When splitter using token length for this case (Token length for each context: 4096): 100%|██████████| 7/7 [00:09<00:00,  1.33s/it]\n",
+    "- When splitter using char length for this case (Char length for each context: 4096): 100%|██████████| 25/25 [00:27<00:00,  1.11s/it]\n"
    ]
   },
   {
