--- a/example/transform/openai_long_text_splitter.ipynb
+++ b/example/transform/openai_long_text_splitter.ipynb
@@ -7,7 +7,10 @@
    "source": [
     "# Using TransformConfig with Long Text\n",
     "\n",
-    "In this example, we demonstrate how to leverage the Transform flow in handling long text that exceeds the token limitation of the ChatGPT API.\n",
+    "In this example, we demonstrate how to leverage the Transform flow in handling long text that exceeds the token limitation of the ChatGPT API. There are three TransformConfigs for OpenAI that you can add the parameter `auto_split_long_text`\n",
+    "- TransformOpenAIConfig\n",
+    "- TransformForGenerationOpenAIGPT3p5Config\n",
+    "- TransformForClusteringOpenAIGPT4Config\n",
     "\n",
     "We use the text from [War and Peace](https://github.com/mmcky/nyu-econ-370/blob/master/notebooks/data/book-war-and-peace.txt) as our example.\n",
     "\n",
@@ -29,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,26 +55,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 138,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33mWARNING: Skipping uniflow as it is not installed.\u001b[0m\u001b[33m\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!{sys.executable} -m pip install -q python-dotenv openai tiktoken\n",
-    "!{sys.executable} -m pip uninstall -y uniflow"
+    "!{sys.executable} -m pip install -q python-dotenv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 139,
    "id": "b12b5bd5",
    "metadata": {},
    "outputs": [
@@ -102,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 140,
    "id": "8d84dd70",
    "metadata": {},
    "outputs": [
@@ -112,7 +105,7 @@
        "True"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 141,
    "id": "dfe82668",
    "metadata": {},
    "outputs": [
@@ -195,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,14 +248,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:08<00:00,  1.14s/it]\n"
+      "100%|██████████| 7/7 [00:06<00:00,  1.02it/s]\n"
      ]
     }
    ],
@@ -280,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 145,
    "id": "74ccffb8",
    "metadata": {},
    "outputs": [
@@ -290,64 +283,64 @@
        "\n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who was the well-known maid of honor and favorite of the Empress Marya Fedorovna at Anna Pavlovna's reception?\n",
+       "            <b>Question:</b> Who is the illegitimate son of Count Bezukhov?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Anna Pavlovna Scherer.\n",
+       "            <b>Answer:</b> Pierre.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who was the first visitor to enter the drawing room in the last context?\n",
+       "            <b>Question:</b> Who is the elderly lady who has come to Petersburg to procure an appointment for her son in the Guards?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Prince Andrew Bolkonski, the little princess' husband.\n",
+       "            <b>Answer:</b> The elderly lady is Princess Drubetskaya.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> What is Prince Hippolyte doing as he whispers something to the little princess?\n",
+       "            <b>Question:</b> What did Prince Hippolyte do after the conversation ended?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Prince Hippolyte is wrapping a shawl around the little princess and keeps his arm around her for a long time.\n",
+       "            <b>Answer:</b> Prince Hippolyte began to whisper something to the little princess and then put on his cloak to follow her out to the porch.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who was Pierre staying with and sharing a dissipated life with?\n",
+       "            <b>Question:</b> What was Prince Andrew's advice to Pierre about getting married?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Pierre was staying at Prince Vasili Kuragin's and sharing the dissipated life of his son Anatole.\n",
+       "            <b>Answer:</b> Prince Andrew advised Pierre to never marry until he could say he has done all he is capable of and has ceased to love the woman of his choice, or else he would make a cruel and irrevocable mistake. He also suggested marrying when one is old and good for nothing, or else all that is good and noble in them will be lost.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who is the tall, stout, and proud-looking woman that entered the drawing room?\n",
+       "            <b>Question:</b> Who were the women that entered the drawing room?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Marya Lvovna Karagina\n",
+       "            <b>Answer:</b> Marya Lvovna Karagina and her daughter.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who does the countess consider her youngest girl?\n",
+       "            <b>Question:</b> Who is the count's eldest son?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Natasha.\n",
+       "            <b>Answer:</b> Nicholas, the undergraduate, is the count's eldest son.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> What did Natasha do after embracing him and kissing him?\n",
+       "            <b>Question:</b> How many years will Natasha have to wait before he asks for her hand in marriage?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Natasha slipped down among the flowerpots on the other side of the tubs and stood, hanging her head.\n",
+       "            <b>Answer:</b> In another four years.\n",
        "        </div>\n",
        "    </div>\n",
        "    "
@@ -397,7 +390,10 @@
     "## Appendix\n",
     "\n",
     "- When splitter using token length for this case (Token length for each context: 4096): 100%|██████████| 7/7 [00:09<00:00,  1.33s/it]\n",
-    "- When splitter using char length for this case (Char length for each context: 4096): 100%|██████████| 25/25 [00:27<00:00,  1.11s/it]\n"
+    "\n",
+    "- When splitter using char length for this case (Char length for each context: 4096): 100%|██████████| 25/25 [00:27<00:00,  1.11s/it]\n",
+    "\n",
+    "(We are using the splitter based on token length for config)\n"
    ]
   },
   {
