--- a/example/transform/openai_long_text_splitter.ipynb
+++ b/example/transform/openai_long_text_splitter.ipynb
@@ -10,7 +10,7 @@
     "In this example, we demonstrate how to leverage the Transform flow in handling long text that exceeds the token limitation of the ChatGPT API. There are three TransformConfigs for OpenAI that you can add the parameter `auto_split_long_text`\n",
     "- TransformOpenAIConfig\n",
     "- TransformForGenerationOpenAIGPT3p5Config\n",
-    "- TransformForClusteringOpenAIGPT4Config\n",
+    "- <del>TransformForClusteringOpenAIGPT4Config</del>\n",
     "\n",
     "We use the text from [War and Peace](https://github.com/mmcky/nyu-econ-370/blob/master/notebooks/data/book-war-and-peace.txt) as our example.\n",
     "\n",
