add the standard example notebook ending

--- a/example/transform/azure_openai_html_QA.ipynb.ipynb
+++ b/example/transform/azure_openai_html_QA.ipynb.ipynb
@@ -419,6 +419,19 @@
     "}])\n",
     "styled_df"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## End of the notebook\n",
+    "\n",
+    "Check more Uniflow use cases in the [example folder](https://github.com/CambioML/uniflow-llm-based-pdf-extraction-text-cleaning-data-clustering/tree/main/example/transform)!\n",
+    "\n",
+    "<a href=\"https://www.cambioml.com/\" title=\"Title\">\n",
+    "    <img src=\"../image/cambioml_logo_large.png\" style=\"height: 100px; display: block; margin-left: auto; margin-right: auto;\"/>\n",
+    "</a>"
+   ]
   }
  ],
  "metadata": {
